demos/devdocs/0.61.0/nvdocument/type-aliases/DocumentData.md
# Type Alias: DocumentData

```ts
type DocumentData = object;
```

Defined in: [nvdocument.ts:363](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L363)

## Properties

### connectomes?

```ts
optional connectomes: string[];
```

Defined in: [nvdocument.ts:374](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L374)

---

### customData?

```ts
optional customData: string;
```

Defined in: [nvdocument.ts:375](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L375)

---

### encodedDrawingBlob?

```ts
optional encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:371](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L371)

---

### encodedImageBlobs?

```ts
optional encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:370](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L370)

---

### imageOptionsArray?

```ts
optional imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:365](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L365)

---

### labels?

```ts
optional labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:369](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L369)

---

### meshesString?

```ts
optional meshesString: string;
```

Defined in: [nvdocument.ts:372](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L372)

---

### meshOptionsArray?

```ts
optional meshOptionsArray: unknown[];
```

Defined in: [nvdocument.ts:366](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L366)

---

### opts?

```ts
optional opts: Partial<NVConfigOptions>;
```

Defined in: [nvdocument.ts:367](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L367)

---

### previewImageDataURL?

```ts
optional previewImageDataURL: string;
```

Defined in: [nvdocument.ts:368](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L368)

---

### sceneData?

```ts
optional sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:373](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L373)

---

### title?

```ts
optional title: string;
```

Defined in: [nvdocument.ts:364](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L364)
