demos/devdocs/0.62.1/nvdocument/type-aliases/DocumentData.md
# Type Alias: DocumentData

```ts
type DocumentData = object;
```

Defined in: [nvdocument.ts:412](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L412)

## Properties

### completedAngles?

```ts
optional completedAngles: CompletedAngle[];
```

Defined in: [nvdocument.ts:426](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L426)

---

### completedMeasurements?

```ts
optional completedMeasurements: CompletedMeasurement[];
```

Defined in: [nvdocument.ts:425](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L425)

---

### connectomes?

```ts
optional connectomes: string[];
```

Defined in: [nvdocument.ts:423](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L423)

---

### customData?

```ts
optional customData: string;
```

Defined in: [nvdocument.ts:424](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L424)

---

### encodedDrawingBlob?

```ts
optional encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:420](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L420)

---

### encodedImageBlobs?

```ts
optional encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:419](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L419)

---

### imageOptionsArray?

```ts
optional imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:414](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L414)

---

### labels?

```ts
optional labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:418](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L418)

---

### meshesString?

```ts
optional meshesString: string;
```

Defined in: [nvdocument.ts:421](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L421)

---

### meshOptionsArray?

```ts
optional meshOptionsArray: unknown[];
```

Defined in: [nvdocument.ts:415](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L415)

---

### opts?

```ts
optional opts: Partial<NVConfigOptions>;
```

Defined in: [nvdocument.ts:416](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L416)

---

### previewImageDataURL?

```ts
optional previewImageDataURL: string;
```

Defined in: [nvdocument.ts:417](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L417)

---

### sceneData?

```ts
optional sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:422](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L422)

---

### title?

```ts
optional title: string;
```

Defined in: [nvdocument.ts:413](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L413)
